Setup Spring shell, created a command to list movies.