@@ -4,9 +4,12 @@ import com.epam.training.ticketservice.core.movie.MovieService;
 import com.epam.training.ticketservice.core.movie.model.MovieDto;
 import com.epam.training.ticketservice.core.movie.persistence.entity.Movie;
 import com.epam.training.ticketservice.core.movie.persistence.repository.MovieRepository;
+import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
+@Service
 public class MovieServiceImpl implements MovieService {
 
     private MovieRepository movieRepository;
@@ -17,7 +20,7 @@ public class MovieServiceImpl implements MovieService {
 
     @Override
     public List<MovieDto> getMovieList() {
-        return movieRepository.findAll().stream().map(this::convertEntityToDto).toList();
+        return movieRepository.findAll().stream().map(this::convertEntityToDto).collect(Collectors.toList());
     }
 
     private MovieDto convertEntityToDto(Movie movie) {
